--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vite + React - Curso</title>
     <script type="module" crossorigin src="./docs/assets/index.d1503936.js"></script>
     <link rel="stylesheet" href="./docs/assets/index.36afc740.css"/>
   </head>
